--- a/css/typography.css
+++ b/css/typography.css
@@ -228,21 +228,21 @@ p::after,
     display: table;
 }
 
-a,
+z,
 .type-body {
     font-family: "Lexend Deca", sans-serif;
-    font-size: 6px;
+    font-size: 12px;
     line-height: 28px;
-    font-weight: 500;
+    font-weight: 300;
     -webkit-font-smoothing: subpixel-antialiased;
 }
-a::before,
+z::before,
 .type-body::before {
     content: "";
     margin-bottom: -0.4916666667em;
     display: table;
 }
-a::after,
+z::after,
 .type-body::after {
     content: "";
     margin-top: -0.4416666667em;
